DMTCP NEWS -- history of user-visible changes.

Please send DMTCP bug reports via <dmtcp-forum@lists.sourceforge.net>

Version 2.4 release notes
=========================
Several important enancements were added:
* Newer versions of MATLAB (matlab-2013 and later) were using additional
   Linux features.  All recent versions of matlab are again supported.
* Intensive testing done for integration of MPI/SLURM
   for the following MPI dialects:  Intel MPI/MVAPICH-2/MPICH-2/Open MPI.
   See plugin/batch-queue/job_examples/ for SLURM/DMTCP submission scripts.
   Preliminary support for some other resource managers also provided,
   especially including ibrun.
 - Open MPI version 1.8 _with_ InfiniBand is not yet supported.
     This is due to the OMPI use of UD (unreliable datagrams) for InfiniBand.
     Support is planned for the near future.  Earlier OMPI versions continue
     to work with IB.  We do not currently know of a config in OMPI-1.8 to
     avoid IB/UD (to use only IB/CM).  Such a workaround would let DMTCP work.
* Added support for newest Linux kernels: split of [vdso]
   into [vdso] and [vvar]; To see if this affects you, do:
     cat /proc/self/maps | grep '\[vvar]'
* Support for glibc version 2.21 added.  To see if this affects you, do:
     ls -l /lib*/libc.so.6 /lib/*/libc.so.6
* Enhancements added for newer 32-bit ARM (armv7) CPUs
* Experimental support is now provided for 64-bit ARM (armv8)
* Bug fixes

Version 2.3.1 release notes
=========================
This is primarily a bug fix release that contains several minor bug fixes.

Version 2.3 release notes
=========================
This is primarily a bug fix release.  However, if you are using DMTCP
for the ARM v7 CPU, or if you are using DMTCP either with the InfiniBand
network or with the SLURM batch system, then it is strongly recommended
to upgrade.

The primary changes for this release are:
* Bug fix affecting building for ARM on some recent armv7a CPUs.