@@ -18,7 +18,7 @@
 %%%%%%%%%%%%%%%%%%
 
 \begin{Description}
-    \item[\Opt{-h}, \Opt{--host} \Arg{hostname} (environment variable DMTCP_HOST)]
+    \item[\Opt{-h}, \Opt{--coord-host} \Arg{hostname} (environment variable DMTCP_COORD_HOST)]
     Hostname where \myProg{dmtcp_coordinator} is run (default: localhost)
 
   \item[\Opt{-p}, \Opt{--port} \Arg{port} (environment variable DMTCP_PORT)]
